//
//  ProfileViewController.swift
//  ImageFeed
//
//  Created by Owi Lover on 8/15/24.
//

import UIKit
import Kingfisher

final class ProfileViewController: UIViewController, ProfileViewControllerProtocol {
    
    var presenter: ProfileViewPresenterProtocol?
    
    private var profileImageServiceObserver: NSObjectProtocol?
    
    private var avatarImageView: UIImageView?
    
    override func viewDidLoad() {
        super.viewDidLoad()
        print("Profile Controller was loaded!", presenter != nil ? " With his presenter!" : " But not his Presenter!")
        
        profileImageServiceObserver = NotificationCenter.default.addObserver(forName: ProfileImageService.didChangeNotification, object: nil, queue: .main) { [weak self] _ in
            guard let self else { return }
            self.presenter?.updateAvatar()
        }
        
        presenter?.viewDidLoad()
    }
    
    func setPresenter(presenter: ProfileViewPresenterProtocol) {
        self.presenter = presenter
        presenter.controller = self
    }
    
    func setAvatarImage(url: URL) {
        avatarImageView?.kf.setImage(with: url, placeholder: UIImage(systemName: "person.crop.circle.fill"))
    }
    
    func updateProfileDetails(profile: Profile) {
        configureView(nameText: profile.name, tagText: profile.loginName, bioText: profile.bio)
    }
    
    private func logout() {
        presenter?.logout()
    }
    
    private func addImageView(under someView: UIView?, image: UIImage?) -> UIImageView? {
        guard let someView else { return nil }
        
        let imageView: UIImageView = {
            let imageView = UIImageView(image: image ?? UIImage(systemName: "person.crop.circle.fill"))
            
            imageView.tintColor = .ypGray
            imageView.layer.cornerRadius = 35
            imageView.layer.masksToBounds = true
            
            return imageView
        }()
        
        view.addSubview(imageView)

        imageView.translatesAutoresizingMaskIntoConstraints = false
        
        NSLayoutConstraint.activate([
            imageView.widthAnchor.constraint(equalToConstant: 70),
            imageView.heightAnchor.constraint(equalToConstant: 70),
            imageView.topAnchor.constraint(equalTo: someView.safeAreaLayoutGuide.topAnchor, constant: 32),
            imageView.leadingAnchor.constraint(equalTo: someView.safeAreaLayoutGuide.leadingAnchor, constant: 16)
        ])
        
        return imageView
    }
    
    private func addButton(nextTo someView: UIView?, image: UIImage?, color: UIColor) -> UIButton? {
        guard let someView else { return nil }
        
        let button:UIButton = {
            let button = UIButton()
            
            button.accessibilityIdentifier = "logoutButton"
            
            button.setTitle(.none, for: .normal)
            button.setImage(image, for: .normal)
            button.tintColor = color
            return button
        }()
        
        button.addTarget(self, action: #selector(createAlert), for: .touchUpInside)
        
        view.addSubview(button)
        
        button.translatesAutoresizingMaskIntoConstraints = false
                
        NSLayoutConstraint.activate([
            button.widthAnchor.constraint(equalToConstant: 44),
            button.heightAnchor.constraint(equalToConstant: 44),
            button.centerYAnchor.constraint(equalTo: someView.centerYAnchor),
            button.trailingAnchor.constraint(equalTo: view.safeAreaLayoutGuide.trailingAnchor, constant: -14)
        ])
        
        return button
    }
    
    private func addLabel(under someView: UIView?, text: String?, font: UIFont, color: UIColor) -> UILabel? {
        guard let someView else { return nil }
        
        let label:UILabel = {
            let label = UILabel()
            
            label.text = text
            label.font = font
            label.textColor = color
            return label
        }()
        
        view.addSubview(label)
        
        label.translatesAutoresizingMaskIntoConstraints = false
        
        NSLayoutConstraint.activate([
            label.topAnchor.constraint(equalTo: someView.bottomAnchor, constant: 8),
            label.leadingAnchor.constraint(equalTo: someView.leadingAnchor)
        ])
        
        return label
    }
    
    private func configureView(nameText: String, tagText: String, bioText: String?) {
        view.backgroundColor = .ypBlack
        
        self.avatarImageView = addImageView(under: view, image: nil)
        _ = addButton(nextTo: avatarImageView, image: UIImage(named: "Exit"), color: .ypRed)
        let nameLabel = addLabel(under: avatarImageView, text: nameText, font: UIFont.systemFont(ofSize: 23, weight: .bold), color: .ypWhite)
        let tagLabel = addLabel(under: nameLabel, text: tagText, font: UIFont.systemFont(ofSize: 13), color: .ypGray)
        _ = addLabel(under: tagLabel, text: bioText, font: UIFont.systemFont(ofSize: 13), color: .ypWhite)
    }
    
    private func configureView() {
        view.backgroundColor = .ypBlack
        
        self.avatarImageView = addImageView(under: view, image: UIImage(named: "Photo"))
        _ = addButton(nextTo: avatarImageView, image: UIImage(named: "Exit"), color: .ypRed)
        let nameLabel = addLabel(under: avatarImageView, text: "Екатерина Новикова", font: UIFont.systemFont(ofSize: 23, weight: .bold), color: .ypWhite)
        let tagLabel = addLabel(under: nameLabel, text: "@ekaterina_nov", font: UIFont.systemFont(ofSize: 13), color: .ypGray)
        _ = addLabel(under: tagLabel, text: "Hello, World!", font: UIFont.systemFont(ofSize: 13), color: .ypWhite)
    }
    
    @objc
    private func createAlert() {
        let alert = UIAlertController(title: "Пока, пока!", message: "Уверены, что хотите выйти?", preferredStyle: .alert)

        let actionLogout = UIAlertAction(title: "Да", style: .default, handler: { [weak self] _ in
            self?.logout()
        })
        
        actionLogout.accessibilityIdentifier = "yes"
        
        let actionCancel = UIAlertAction(title: "Нет", style: .default)
        
        actionCancel.accessibilityIdentifier = "no"
        
        alert.addAction(actionLogout)
        alert.addAction(actionCancel)
        
        alert.view.accessibilityIdentifier = "ByeBye"
        
        self.present(alert, animated: true)
    }
}
