...
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="27 августа 2022" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="THu-7T-cCa" userLabel="Date Label">
                                                    <rect key="frame" x="24" y="168" width="366" height="16"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                    <color key="textColor" name="YP White"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AhL-V1-0MK" userLabel="LikeButton">
                                                    <rect key="frame" x="354" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="LikeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="44" id="0cM-k8-Man"/>
                                                        <constraint firstAttribute="height" constant="44" id="7mf-oC-PHx"/>
                                                    </constraints>
...
                                <viewLayoutGuide key="contentLayoutGuide" id="g0S-xp-8b5"/>
                                <viewLayoutGuide key="frameLayoutGuide" id="4pC-j9-BaV"/>
                                <connections>
                                    <outlet property="delegate" destination="L9V-CC-Ge7" id="hSK-80-lgC"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d0H-JY-SyC" userLabel="BackButton">
                                <rect key="frame" x="9" y="9" width="44" height="44"/>
                                <accessibility key="accessibilityConfiguration" identifier="BackButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="44" id="D95-PS-mEM"/>
                                    <constraint firstAttribute="height" constant="44" id="M7x-mZ-klO"/>
                                </constraints>
...
