...
    case urlComponentsError
    case badUrlError
    case codeItemIsNil
}

enum WebViewControllerIdentifiers: String {
    case webView = "UnsplashWebView"
}

final class WebViewController: UIViewController, WebViewViewControllerProtocol {
    
    var presenter: WebViewPresenterProtocol?
    
...
