...
    private func createButton() {
        let button:UIButton = {
            let button = UIButton()
            
            button.setTitle("Войти", for: .normal)
            button.setTitleColor(.ypBlack, for: .normal)
            button.accessibilityIdentifier = "Authenticate" 
            
            let font = UIFont.systemFont(ofSize: 17, weight: .bold)
            button.titleLabel?.font = font
            
            button.backgroundColor = .ypWhite
            button.layer.cornerRadius = 16
...
